--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "registration",
   "version": "1.0.0",
   "description": "user-registration",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "build": "npm install && npm run build",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ajay Prasad Verma",
